# melee-anim-rs

./: Cargo.toml  Readme.md  build.rs
examples/: render.rs
examples/assets/: animation.figatree  hurtboxes.csv  model.smd
src/: _main.rs  animation.rs  bone.rs  bones.rs  hurtbox.rs  hurtboxes.rs  lib.rs  main.rs
