[package]
name = "melee-anim-rs"
version = "0.1.0"
authors = ["Gurvan Priem <gurvan.priem@biosency.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.23"
# kiss3d = { git = "https://github.com/sebcrozet/kiss3d" }
# lyon = "0.16.2"
bevy = "0.4"
bevy_prototype_lyon = { git = "https://github.com/Nilirad/bevy_prototype_lyon"}